Procerular/p5/entrega_parcial/codigo/y.output
Terminales no usados en la gramática

   TOK_COMENTARIO
   TOK_SALTO
   TOK_BLANCO
   TOK_FLECHA
   TOK_ERROR
   TOK_FOR
   TOK_SWITCH
   TOK_CASE
   TOK_DEFAULT
   TOK_FLOAT
   TOK_MALLOC
   TOK_CPRINTF
   TOK_FREE
   TOK_SET
   TOK_OF
   TOK_UNION
   TOK_INTERSECTION
   TOK_ADD
   TOK_CLEAR
   TOK_SIZE
   TOK_CONTAINS
   TOK_CONSTANTE_REAL


Gramática

    0 $accept: programa $end

    1 programa: TOK_MAIN inicioTabla '{' declaraciones escribirHastaMain funciones sentencias '}'
    2         | TOK_MAIN inicioTabla '{' escribirHastaMain funciones sentencias '}'

    3 inicioTabla: %empty

    4 escribirHastaMain: %empty

    5 declaraciones: declaracion
    6              | declaracion declaraciones

    7 declaracion: modificadores_acceso clase identificadores_declaracion ';'
    8            | modificadores_acceso declaracion_clase ';'

    9 modificadores_acceso: TOK_HIDDEN TOK_UNIQUE
   10                     | TOK_SECRET TOK_UNIQUE
   11                     | TOK_EXPOSED TOK_UNIQUE
   12                     | TOK_HIDDEN
   13                     | TOK_SECRET
   14                     | TOK_EXPOSED
   15                     | TOK_UNIQUE
   16                     | %empty

   17 clase: clase_escalar
   18      | clase_vector
   19      | clase_objeto

   20 declaracion_clase: modificadores_clase TOK_CLASS TOK_IDENTIFICADOR inherits identificadores '{' declaraciones funciones '}'
   21                  | modificadores_clase TOK_CLASS TOK_IDENTIFICADOR inherits identificadores '{' funciones '}'
   22                  | modificadores_clase TOK_CLASS TOK_IDENTIFICADOR '{' declaraciones funciones '}'

   23 modificadores_clase: %empty

   24 clase_escalar: tipo

   25 tipo: TOK_INT
   26     | TOK_BOOLEAN

   27 clase_objeto: '{' TOK_IDENTIFICADOR '}'

   28 clase_vector: TOK_ARRAY tipo '[' constante_entera ']'

   29 identificadores: TOK_IDENTIFICADOR
   30                | TOK_IDENTIFICADOR ',' identificadores

   31 identificadores_declaracion: identificador
   32                            | identificador ',' identificadores_declaracion

   33 identificador: TOK_IDENTIFICADOR

   34 funciones: funcion funciones
   35          | %empty

   36 funcion: TOK_FUNCTION modificadores_acceso tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

   37 tipo_retorno: TOK_NONE
   38             | tipo
   39             | clase_objeto

   40 inherits: TOK_INHERITS

   41 parametros_funcion: parametro_funcion resto_parametros_funcion
   42                   | %empty

   43 resto_parametros_funcion: ';' parametro_funcion resto_parametros_funcion
   44                         | %empty

   45 parametro_funcion: tipo TOK_IDENTIFICADOR
   46                  | clase_objeto TOK_IDENTIFICADOR

   47 declaraciones_funcion: declaraciones
   48                      | %empty

   49 sentencias: sentencia
   50           | sentencia sentencias

   51 sentencia: sentencia_simple ';'
   52          | bloque

   53 sentencia_simple: asignacion
   54                 | lectura
   55                 | escritura
   56                 | retorno_funcion
   57                 | identificador_clase '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   58                 | TOK_IDENTIFICADOR '(' lista_expresiones ')'
   59                 | destruir_objeto

   60 destruir_objeto: TOK_DISCARD TOK_IDENTIFICADOR

   61 bloque: condicional
   62       | bucle

   63 asignacion: TOK_IDENTIFICADOR '=' exp
   64           | elemento_vector '=' exp
   65           | elemento_vector '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   66           | TOK_IDENTIFICADOR '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   67           | identificador_clase '.' TOK_IDENTIFICADOR '=' exp

   68 elemento_vector: TOK_IDENTIFICADOR '[' exp ']'

   69 condicional: if_exp_sentencias TOK_ELSE '{' sentencias '}'

   70 if_exp_sentencias: if_exp sentencias '}'

   71 if_exp: TOK_IF '(' exp ')' '{'

   72 bucle: TOK_WHILE '(' exp ')' '{' sentencias '}'

   73 lectura: TOK_SCANF TOK_IDENTIFICADOR
   74        | TOK_SCANF elemento_vector

   75 escritura: TOK_PRINTF exp

   76 retorno_funcion: TOK_RETURN exp
   77                | TOK_RETURN TOK_NONE

   78 exp: exp '+' exp
   79    | exp '-' exp
   80    | exp '/' exp
   81    | exp '*' exp
   82    | '-' exp
   83    | exp TOK_AND exp
   84    | exp TOK_OR exp
   85    | '!' exp
   86    | TOK_IDENTIFICADOR
   87    | constante
   88    | '(' exp ')'
   89    | '(' comparacion ')'
   90    | elemento_vector
   91    | TOK_IDENTIFICADOR '(' lista_expresiones ')'
   92    | identificador_clase '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   93    | identificador_clase '.' TOK_IDENTIFICADOR

   94 identificador_clase: TOK_IDENTIFICADOR
   95                    | TOK_ITSELF

   96 lista_expresiones: exp resto_lista_expresiones
   97                  | %empty

   98 resto_lista_expresiones: ',' exp resto_lista_expresiones
   99                        | %empty

  100 comparacion: exp TOK_IGUAL exp
  101            | exp TOK_DISTINTO exp
  102            | exp TOK_MENORIGUAL exp
  103            | exp TOK_MAYORIGUAL exp
  104            | exp '<' exp
  105            | exp '>' exp

  106 constante: constante_logica
  107          | constante_entera

  108 constante_logica: TOK_TRUE
  109                 | TOK_FALSE

  110 constante_entera: TOK_CONSTANTE_ENTERA


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 85
'(' (40) 36 57 58 65 66 71 72 88 89 91 92
')' (41) 36 57 58 65 66 71 72 88 89 91 92
'*' (42) 81
'+' (43) 78
',' (44) 30 32 98
'-' (45) 79 82
'.' (46) 57 67 92 93
'/' (47) 80
';' (59) 7 8 43 51
'<' (60) 104
'=' (61) 63 64 65 66 67
'>' (62) 105
'[' (91) 28 68
']' (93) 28 68
'{' (123) 1 2 20 21 22 27 36 69 71 72
'}' (125) 1 2 20 21 22 27 36 69 70 72
error (256)
TOK_COMENTARIO (258)
TOK_SALTO (259)
TOK_BLANCO (260)
TOK_NONE (261) 37 77
TOK_CLASS (262) 20 21 22
TOK_INHERITS (263) 40
TOK_INSTANCE_OF (264) 65 66
TOK_DISCARD (265) 60
TOK_ITSELF (266) 95
TOK_FLECHA (267)
TOK_HIDDEN (268) 9 12
TOK_SECRET (269) 10 13
TOK_EXPOSED (270) 11 14
TOK_UNIQUE (271) 9 10 11 15
TOK_FUNCTION (272) 36
TOK_RETURN (273) 76 77
TOK_MAIN (274) 1 2
TOK_INT (275) 25
TOK_BOOLEAN (276) 26
TOK_ARRAY (277) 28
TOK_IF (278) 71
TOK_ELSE (279) 69
TOK_WHILE (280) 72
TOK_SCANF (281) 73 74
TOK_PRINTF (282) 75
TOK_IDENTIFICADOR (283) 20 21 22 27 29 30 33 36 45 46 57 58 60 63 65
    66 67 68 73 86 91 92 93 94
TOK_IGUAL (284) 100
TOK_DISTINTO (285) 101
TOK_MENORIGUAL (286) 102
TOK_MAYORIGUAL (287) 103
TOK_OR (288) 84
TOK_AND (289) 83
TOK_CONSTANTE_ENTERA (290) 110
TOK_FALSE (291) 109
TOK_TRUE (292) 108
TOK_ERROR (293)
TOK_FOR (294)
TOK_SWITCH (295)
TOK_CASE (296)
TOK_DEFAULT (297)
TOK_FLOAT (298)
TOK_MALLOC (299)
TOK_CPRINTF (300)
TOK_FREE (301)
TOK_SET (302)
TOK_OF (303)
TOK_UNION (304)
TOK_INTERSECTION (305)
TOK_ADD (306)
TOK_CLEAR (307)
TOK_SIZE (308)
TOK_CONTAINS (309)
TOK_CONSTANTE_REAL (310)
UNARIO (311)


No terminales con las reglas donde aparecen

$accept (74)
    en la izquierda: 0
programa (75)
    en la izquierda: 1 2, en la derecha: 0
inicioTabla (76)
    en la izquierda: 3, en la derecha: 1 2
escribirHastaMain (77)
    en la izquierda: 4, en la derecha: 1 2
declaraciones (78)
    en la izquierda: 5 6, en la derecha: 1 6 20 22 47
declaracion (79)
    en la izquierda: 7 8, en la derecha: 5 6
modificadores_acceso (80)
    en la izquierda: 9 10 11 12 13 14 15 16, en la derecha: 7 8 36
clase (81)
    en la izquierda: 17 18 19, en la derecha: 7
declaracion_clase (82)
    en la izquierda: 20 21 22, en la derecha: 8
modificadores_clase (83)
    en la izquierda: 23, en la derecha: 20 21 22
clase_escalar (84)
    en la izquierda: 24, en la derecha: 17
tipo (85)
    en la izquierda: 25 26, en la derecha: 24 28 38 45
clase_objeto (86)
    en la izquierda: 27, en la derecha: 19 39 46
clase_vector (87)
    en la izquierda: 28, en la derecha: 18
identificadores (88)
    en la izquierda: 29 30, en la derecha: 20 21 30
identificadores_declaracion (89)
    en la izquierda: 31 32, en la derecha: 7 32
identificador (90)
    en la izquierda: 33, en la derecha: 31 32
funciones (91)
    en la izquierda: 34 35, en la derecha: 1 2 20 21 22 34
funcion (92)
    en la izquierda: 36, en la derecha: 34
tipo_retorno (93)
    en la izquierda: 37 38 39, en la derecha: 36
inherits (94)
    en la izquierda: 40, en la derecha: 20 21
parametros_funcion (95)
    en la izquierda: 41 42, en la derecha: 36
resto_parametros_funcion (96)
    en la izquierda: 43 44, en la derecha: 41 43
parametro_funcion (97)
    en la izquierda: 45 46, en la derecha: 41 43
declaraciones_funcion (98)
    en la izquierda: 47 48, en la derecha: 36
sentencias (99)
    en la izquierda: 49 50, en la derecha: 1 2 36 50 69 70 72
sentencia (100)
    en la izquierda: 51 52, en la derecha: 49 50
sentencia_simple (101)
    en la izquierda: 53 54 55 56 57 58 59, en la derecha: 51
destruir_objeto (102)
    en la izquierda: 60, en la derecha: 59
bloque (103)
    en la izquierda: 61 62, en la derecha: 52
asignacion (104)
    en la izquierda: 63 64 65 66 67, en la derecha: 53
elemento_vector (105)
    en la izquierda: 68, en la derecha: 64 65 74 90
condicional (106)
    en la izquierda: 69, en la derecha: 61
if_exp_sentencias (107)
    en la izquierda: 70, en la derecha: 69
if_exp (108)
    en la izquierda: 71, en la derecha: 70
bucle (109)
    en la izquierda: 72, en la derecha: 62
lectura (110)
    en la izquierda: 73 74, en la derecha: 54
escritura (111)
    en la izquierda: 75, en la derecha: 55
retorno_funcion (112)
    en la izquierda: 76 77, en la derecha: 56
exp (113)
    en la izquierda: 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93,
    en la derecha: 63 64 67 68 71 72 75 76 78 79 80 81 82 83 84 85
    88 96 98 100 101 102 103 104 105
identificador_clase (114)
    en la izquierda: 94 95, en la derecha: 57 67 92 93
lista_expresiones (115)
    en la izquierda: 96 97, en la derecha: 57 58 65 66 91 92
resto_lista_expresiones (116)
    en la izquierda: 98 99, en la derecha: 96 98
comparacion (117)
    en la izquierda: 100 101 102 103 104 105, en la derecha: 89
constante (118)
    en la izquierda: 106 107, en la derecha: 87
constante_logica (119)
    en la izquierda: 108 109, en la derecha: 106
constante_entera (120)
    en la izquierda: 110, en la derecha: 28 107


Estado 0

    0 $accept: . programa $end

    TOK_MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: TOK_MAIN . inicioTabla '{' declaraciones escribirHastaMain funciones sentencias '}'
    2         | TOK_MAIN . inicioTabla '{' escribirHastaMain funciones sentencias '}'

    $default  reduce usando la regla 3 (inicioTabla)

    inicioTabla  ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: TOK_MAIN inicioTabla . '{' declaraciones escribirHastaMain funciones sentencias '}'
    2         | TOK_MAIN inicioTabla . '{' escribirHastaMain funciones sentencias '}'

    '{'  desplazar e ir al estado 5


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

    1 programa: TOK_MAIN inicioTabla '{' . declaraciones escribirHastaMain funciones sentencias '}'
    2         | TOK_MAIN inicioTabla '{' . escribirHastaMain funciones sentencias '}'

    TOK_HIDDEN   desplazar e ir al estado 6
    TOK_SECRET   desplazar e ir al estado 7
    TOK_EXPOSED  desplazar e ir al estado 8
    TOK_UNIQUE   desplazar e ir al estado 9

    TOK_CLASS    reduce usando la regla 16 (modificadores_acceso)
    TOK_INT      reduce usando la regla 16 (modificadores_acceso)
    TOK_BOOLEAN  reduce usando la regla 16 (modificadores_acceso)
    TOK_ARRAY    reduce usando la regla 16 (modificadores_acceso)
    '{'          reduce usando la regla 16 (modificadores_acceso)
    $default     reduce usando la regla 4 (escribirHastaMain)

    escribirHastaMain     ir al estado 10
    declaraciones         ir al estado 11
    declaracion           ir al estado 12
    modificadores_acceso  ir al estado 13


Estado 6

    9 modificadores_acceso: TOK_HIDDEN . TOK_UNIQUE
   12                     | TOK_HIDDEN .

    TOK_UNIQUE  desplazar e ir al estado 14

    $default  reduce usando la regla 12 (modificadores_acceso)


Estado 7

   10 modificadores_acceso: TOK_SECRET . TOK_UNIQUE
   13                     | TOK_SECRET .

    TOK_UNIQUE  desplazar e ir al estado 15

    $default  reduce usando la regla 13 (modificadores_acceso)


Estado 8

   11 modificadores_acceso: TOK_EXPOSED . TOK_UNIQUE
   14                     | TOK_EXPOSED .

    TOK_UNIQUE  desplazar e ir al estado 16

    $default  reduce usando la regla 14 (modificadores_acceso)


Estado 9

   15 modificadores_acceso: TOK_UNIQUE .

    $default  reduce usando la regla 15 (modificadores_acceso)


Estado 10

    2 programa: TOK_MAIN inicioTabla '{' escribirHastaMain . funciones sentencias '}'

    TOK_FUNCTION  desplazar e ir al estado 17

    $default  reduce usando la regla 35 (funciones)

    funciones  ir al estado 18
    funcion    ir al estado 19


Estado 11

    1 programa: TOK_MAIN inicioTabla '{' declaraciones . escribirHastaMain funciones sentencias '}'

    $default  reduce usando la regla 4 (escribirHastaMain)

    escribirHastaMain  ir al estado 20


Estado 12

    5 declaraciones: declaracion .
    6              | declaracion . declaraciones

    TOK_HIDDEN   desplazar e ir al estado 6
    TOK_SECRET   desplazar e ir al estado 7
    TOK_EXPOSED  desplazar e ir al estado 8
    TOK_UNIQUE   desplazar e ir al estado 9

    TOK_CLASS    reduce usando la regla 16 (modificadores_acceso)
    TOK_INT      reduce usando la regla 16 (modificadores_acceso)
    TOK_BOOLEAN  reduce usando la regla 16 (modificadores_acceso)
    TOK_ARRAY    reduce usando la regla 16 (modificadores_acceso)
    '{'          reduce usando la regla 16 (modificadores_acceso)
    $default     reduce usando la regla 5 (declaraciones)

    declaraciones         ir al estado 21
    declaracion           ir al estado 12
    modificadores_acceso  ir al estado 13


Estado 13

    7 declaracion: modificadores_acceso . clase identificadores_declaracion ';'
    8            | modificadores_acceso . declaracion_clase ';'

    TOK_INT      desplazar e ir al estado 22
    TOK_BOOLEAN  desplazar e ir al estado 23
    TOK_ARRAY    desplazar e ir al estado 24
    '{'          desplazar e ir al estado 25

    $default  reduce usando la regla 23 (modificadores_clase)

    clase                ir al estado 26
    declaracion_clase    ir al estado 27
    modificadores_clase  ir al estado 28
    clase_escalar        ir al estado 29
    tipo                 ir al estado 30
    clase_objeto         ir al estado 31
    clase_vector         ir al estado 32


Estado 14

    9 modificadores_acceso: TOK_HIDDEN TOK_UNIQUE .

    $default  reduce usando la regla 9 (modificadores_acceso)


Estado 15

   10 modificadores_acceso: TOK_SECRET TOK_UNIQUE .

    $default  reduce usando la regla 10 (modificadores_acceso)


Estado 16

   11 modificadores_acceso: TOK_EXPOSED TOK_UNIQUE .

    $default  reduce usando la regla 11 (modificadores_acceso)


Estado 17

   36 funcion: TOK_FUNCTION . modificadores_acceso tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_HIDDEN   desplazar e ir al estado 6
    TOK_SECRET   desplazar e ir al estado 7
    TOK_EXPOSED  desplazar e ir al estado 8
    TOK_UNIQUE   desplazar e ir al estado 9

    $default  reduce usando la regla 16 (modificadores_acceso)

    modificadores_acceso  ir al estado 33


Estado 18

    2 programa: TOK_MAIN inicioTabla '{' escribirHastaMain funciones . sentencias '}'

    TOK_DISCARD        desplazar e ir al estado 34
    TOK_ITSELF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IF             desplazar e ir al estado 37
    TOK_WHILE          desplazar e ir al estado 38
    TOK_SCANF          desplazar e ir al estado 39
    TOK_PRINTF         desplazar e ir al estado 40
    TOK_IDENTIFICADOR  desplazar e ir al estado 41

    sentencias           ir al estado 42
    sentencia            ir al estado 43
    sentencia_simple     ir al estado 44
    destruir_objeto      ir al estado 45
    bloque               ir al estado 46
    asignacion           ir al estado 47
    elemento_vector      ir al estado 48
    condicional          ir al estado 49
    if_exp_sentencias    ir al estado 50
    if_exp               ir al estado 51
    bucle                ir al estado 52
    lectura              ir al estado 53
    escritura            ir al estado 54
    retorno_funcion      ir al estado 55
    identificador_clase  ir al estado 56


Estado 19

   34 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 17

    $default  reduce usando la regla 35 (funciones)

    funciones  ir al estado 57
    funcion    ir al estado 19


Estado 20

    1 programa: TOK_MAIN inicioTabla '{' declaraciones escribirHastaMain . funciones sentencias '}'

    TOK_FUNCTION  desplazar e ir al estado 17

    $default  reduce usando la regla 35 (funciones)

    funciones  ir al estado 58
    funcion    ir al estado 19


Estado 21

    6 declaraciones: declaracion declaraciones .

    $default  reduce usando la regla 6 (declaraciones)


Estado 22

   25 tipo: TOK_INT .

    $default  reduce usando la regla 25 (tipo)


Estado 23

   26 tipo: TOK_BOOLEAN .

    $default  reduce usando la regla 26 (tipo)


Estado 24

   28 clase_vector: TOK_ARRAY . tipo '[' constante_entera ']'

    TOK_INT      desplazar e ir al estado 22
    TOK_BOOLEAN  desplazar e ir al estado 23

    tipo  ir al estado 59


Estado 25

   27 clase_objeto: '{' . TOK_IDENTIFICADOR '}'

    TOK_IDENTIFICADOR  desplazar e ir al estado 60


Estado 26

    7 declaracion: modificadores_acceso clase . identificadores_declaracion ';'

    TOK_IDENTIFICADOR  desplazar e ir al estado 61

    identificadores_declaracion  ir al estado 62
    identificador                ir al estado 63


Estado 27

    8 declaracion: modificadores_acceso declaracion_clase . ';'

    ';'  desplazar e ir al estado 64


Estado 28

   20 declaracion_clase: modificadores_clase . TOK_CLASS TOK_IDENTIFICADOR inherits identificadores '{' declaraciones funciones '}'
   21                  | modificadores_clase . TOK_CLASS TOK_IDENTIFICADOR inherits identificadores '{' funciones '}'
   22                  | modificadores_clase . TOK_CLASS TOK_IDENTIFICADOR '{' declaraciones funciones '}'

    TOK_CLASS  desplazar e ir al estado 65


Estado 29

   17 clase: clase_escalar .

    $default  reduce usando la regla 17 (clase)


Estado 30

   24 clase_escalar: tipo .

    $default  reduce usando la regla 24 (clase_escalar)


Estado 31

   19 clase: clase_objeto .

    $default  reduce usando la regla 19 (clase)


Estado 32

   18 clase: clase_vector .

    $default  reduce usando la regla 18 (clase)


Estado 33

   36 funcion: TOK_FUNCTION modificadores_acceso . tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_NONE     desplazar e ir al estado 66
    TOK_INT      desplazar e ir al estado 22
    TOK_BOOLEAN  desplazar e ir al estado 23
    '{'          desplazar e ir al estado 25

    tipo          ir al estado 67
    clase_objeto  ir al estado 68
    tipo_retorno  ir al estado 69


Estado 34

   60 destruir_objeto: TOK_DISCARD . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  desplazar e ir al estado 70


Estado 35

   95 identificador_clase: TOK_ITSELF .

    $default  reduce usando la regla 95 (identificador_clase)


Estado 36

   76 retorno_funcion: TOK_RETURN . exp
   77                | TOK_RETURN . TOK_NONE

    TOK_NONE              desplazar e ir al estado 71
    TOK_ITSELF            desplazar e ir al estado 35
    TOK_IDENTIFICADOR     desplazar e ir al estado 72
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 73
    TOK_FALSE             desplazar e ir al estado 74
    TOK_TRUE              desplazar e ir al estado 75
    '-'                   desplazar e ir al estado 76
    '!'                   desplazar e ir al estado 77
    '('                   desplazar e ir al estado 78

    elemento_vector      ir al estado 79
    exp                  ir al estado 80
    identificador_clase  ir al estado 81
    constante            ir al estado 82
    constante_logica     ir al estado 83
    constante_entera     ir al estado 84


Estado 37

   71 if_exp: TOK_IF . '(' exp ')' '{'

    '('  desplazar e ir al estado 85


Estado 38

   72 bucle: TOK_WHILE . '(' exp ')' '{' sentencias '}'

    '('  desplazar e ir al estado 86


Estado 39

   73 lectura: TOK_SCANF . TOK_IDENTIFICADOR
   74        | TOK_SCANF . elemento_vector

    TOK_IDENTIFICADOR  desplazar e ir al estado 87

    elemento_vector  ir al estado 88


Estado 40

   75 escritura: TOK_PRINTF . exp

    TOK_ITSELF            desplazar e ir al estado 35
    TOK_IDENTIFICADOR     desplazar e ir al estado 72
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 73
    TOK_FALSE             desplazar e ir al estado 74
    TOK_TRUE              desplazar e ir al estado 75
    '-'                   desplazar e ir al estado 76
    '!'                   desplazar e ir al estado 77
    '('                   desplazar e ir al estado 78

    elemento_vector      ir al estado 79
    exp                  ir al estado 89
    identificador_clase  ir al estado 81
    constante            ir al estado 82
    constante_logica     ir al estado 83
    constante_entera     ir al estado 84


Estado 41

   58 sentencia_simple: TOK_IDENTIFICADOR . '(' lista_expresiones ')'
   63 asignacion: TOK_IDENTIFICADOR . '=' exp
   66           | TOK_IDENTIFICADOR . '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   68 elemento_vector: TOK_IDENTIFICADOR . '[' exp ']'
   94 identificador_clase: TOK_IDENTIFICADOR .

    '['  desplazar e ir al estado 90
    '('  desplazar e ir al estado 91
    '='  desplazar e ir al estado 92

    $default  reduce usando la regla 94 (identificador_clase)


Estado 42

    2 programa: TOK_MAIN inicioTabla '{' escribirHastaMain funciones sentencias . '}'

    '}'  desplazar e ir al estado 93


Estado 43

   49 sentencias: sentencia .
   50           | sentencia . sentencias

    TOK_DISCARD        desplazar e ir al estado 34
    TOK_ITSELF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IF             desplazar e ir al estado 37
    TOK_WHILE          desplazar e ir al estado 38
    TOK_SCANF          desplazar e ir al estado 39
    TOK_PRINTF         desplazar e ir al estado 40
    TOK_IDENTIFICADOR  desplazar e ir al estado 41

    $default  reduce usando la regla 49 (sentencias)

    sentencias           ir al estado 94
    sentencia            ir al estado 43
    sentencia_simple     ir al estado 44
    destruir_objeto      ir al estado 45
    bloque               ir al estado 46
    asignacion           ir al estado 47
    elemento_vector      ir al estado 48
    condicional          ir al estado 49
    if_exp_sentencias    ir al estado 50
    if_exp               ir al estado 51
    bucle                ir al estado 52
    lectura              ir al estado 53
    escritura            ir al estado 54
    retorno_funcion      ir al estado 55
    identificador_clase  ir al estado 56


Estado 44

   51 sentencia: sentencia_simple . ';'

    ';'  desplazar e ir al estado 95


Estado 45

   59 sentencia_simple: destruir_objeto .

    $default  reduce usando la regla 59 (sentencia_simple)


Estado 46

   52 sentencia: bloque .

    $default  reduce usando la regla 52 (sentencia)


Estado 47

   53 sentencia_simple: asignacion .

    $default  reduce usando la regla 53 (sentencia_simple)


Estado 48

   64 asignacion: elemento_vector . '=' exp
   65           | elemento_vector . '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'

    '='  desplazar e ir al estado 96


Estado 49

   61 bloque: condicional .

    $default  reduce usando la regla 61 (bloque)


Estado 50

   69 condicional: if_exp_sentencias . TOK_ELSE '{' sentencias '}'

    TOK_ELSE  desplazar e ir al estado 97


Estado 51

   70 if_exp_sentencias: if_exp . sentencias '}'

    TOK_DISCARD        desplazar e ir al estado 34
    TOK_ITSELF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IF             desplazar e ir al estado 37
    TOK_WHILE          desplazar e ir al estado 38
    TOK_SCANF          desplazar e ir al estado 39
    TOK_PRINTF         desplazar e ir al estado 40
    TOK_IDENTIFICADOR  desplazar e ir al estado 41

    sentencias           ir al estado 98
    sentencia            ir al estado 43
    sentencia_simple     ir al estado 44
    destruir_objeto      ir al estado 45
    bloque               ir al estado 46
    asignacion           ir al estado 47
    elemento_vector      ir al estado 48
    condicional          ir al estado 49
    if_exp_sentencias    ir al estado 50
    if_exp               ir al estado 51
    bucle                ir al estado 52
    lectura              ir al estado 53
    escritura            ir al estado 54
    retorno_funcion      ir al estado 55
    identificador_clase  ir al estado 56


Estado 52

   62 bloque: bucle .

    $default  reduce usando la regla 62 (bloque)


Estado 53

   54 sentencia_simple: lectura .

    $default  reduce usando la regla 54 (sentencia_simple)


Estado 54

   55 sentencia_simple: escritura .

    $default  reduce usando la regla 55 (sentencia_simple)


Estado 55

   56 sentencia_simple: retorno_funcion .

    $default  reduce usando la regla 56 (sentencia_simple)


Estado 56

   57 sentencia_simple: identificador_clase . '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   67 asignacion: identificador_clase . '.' TOK_IDENTIFICADOR '=' exp

    '.'  desplazar e ir al estado 99


Estado 57

   34 funciones: funcion funciones .

    $default  reduce usando la regla 34 (funciones)


Estado 58

    1 programa: TOK_MAIN inicioTabla '{' declaraciones escribirHastaMain funciones . sentencias '}'

    TOK_DISCARD        desplazar e ir al estado 34
    TOK_ITSELF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IF             desplazar e ir al estado 37
    TOK_WHILE          desplazar e ir al estado 38
    TOK_SCANF          desplazar e ir al estado 39
    TOK_PRINTF         desplazar e ir al estado 40
    TOK_IDENTIFICADOR  desplazar e ir al estado 41

    sentencias           ir al estado 100
    sentencia            ir al estado 43
    sentencia_simple     ir al estado 44
    destruir_objeto      ir al estado 45
    bloque               ir al estado 46
    asignacion           ir al estado 47
    elemento_vector      ir al estado 48
    condicional          ir al estado 49
    if_exp_sentencias    ir al estado 50
    if_exp               ir al estado 51
    bucle                ir al estado 52
    lectura              ir al estado 53
    escritura            ir al estado 54
    retorno_funcion      ir al estado 55
    identificador_clase  ir al estado 56


Estado 59

   28 clase_vector: TOK_ARRAY tipo . '[' constante_entera ']'

    '['  desplazar e ir al estado 101


Estado 60

   27 clase_objeto: '{' TOK_IDENTIFICADOR . '}'

    '}'  desplazar e ir al estado 102


Estado 61

   33 identificador: TOK_IDENTIFICADOR .

    $default  reduce usando la regla 33 (identificador)


Estado 62

    7 declaracion: modificadores_acceso clase identificadores_declaracion . ';'

    ';'  desplazar e ir al estado 103


Estado 63

   31 identificadores_declaracion: identificador .
   32                            | identificador . ',' identificadores_declaracion

    ','  desplazar e ir al estado 104

    $default  reduce usando la regla 31 (identificadores_declaracion)


Estado 64

    8 declaracion: modificadores_acceso declaracion_clase ';' .

    $default  reduce usando la regla 8 (declaracion)


Estado 65

   20 declaracion_clase: modificadores_clase TOK_CLASS . TOK_IDENTIFICADOR inherits identificadores '{' declaraciones funciones '}'
   21                  | modificadores_clase TOK_CLASS . TOK_IDENTIFICADOR inherits identificadores '{' funciones '}'
   22                  | modificadores_clase TOK_CLASS . TOK_IDENTIFICADOR '{' declaraciones funciones '}'

    TOK_IDENTIFICADOR  desplazar e ir al estado 105


Estado 66

   37 tipo_retorno: TOK_NONE .

    $default  reduce usando la regla 37 (tipo_retorno)


Estado 67

   38 tipo_retorno: tipo .

    $default  reduce usando la regla 38 (tipo_retorno)


Estado 68

   39 tipo_retorno: clase_objeto .

    $default  reduce usando la regla 39 (tipo_retorno)


Estado 69

   36 funcion: TOK_FUNCTION modificadores_acceso tipo_retorno . TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_IDENTIFICADOR  desplazar e ir al estado 106


Estado 70

   60 destruir_objeto: TOK_DISCARD TOK_IDENTIFICADOR .

    $default  reduce usando la regla 60 (destruir_objeto)


Estado 71

   77 retorno_funcion: TOK_RETURN TOK_NONE .

    $default  reduce usando la regla 77 (retorno_funcion)


Estado 72

   68 elemento_vector: TOK_IDENTIFICADOR . '[' exp ']'
   86 exp: TOK_IDENTIFICADOR .
   91    | TOK_IDENTIFICADOR . '(' lista_expresiones ')'
   94 identificador_clase: TOK_IDENTIFICADOR .

    '['  desplazar e ir al estado 90
    '('  desplazar e ir al estado 107

    '.'       reduce usando la regla 94 (identificador_clase)
    $default  reduce usando la regla 86 (exp)


Estado 73

  110 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce usando la regla 110 (constante_entera)


Estado 74

  109 constante_logica: TOK_FALSE .

    $default  reduce usando la regla 109 (constante_logica)


Estado 75

  108 constante_logica: TOK_TRUE .

    $default  reduce usando la regla 108 (constante_logica)


Estado 76

   82 exp: '-' . exp

    TOK_ITSELF            desplazar e ir al estado 35
    TOK_IDENTIFICADOR     desplazar e ir al estado 72
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 73
    TOK_FALSE             desplazar e ir al estado 74
    TOK_TRUE              desplazar e ir al estado 75
    '-'                   desplazar e ir al estado 76
    '!'                   desplazar e ir al estado 77
    '('                   desplazar e ir al estado 78

    elemento_vector      ir al estado 79
    exp                  ir al estado 108
    identificador_clase  ir al estado 81
    constante            ir al estado 82
    constante_logica     ir al estado 83
    constante_entera     ir al estado 84


Estado 77

   85 exp: '!' . exp

    TOK_ITSELF            desplazar e ir al estado 35
    TOK_IDENTIFICADOR     desplazar e ir al estado 72
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 73
    TOK_FALSE             desplazar e ir al estado 74
    TOK_TRUE              desplazar e ir al estado 75
    '-'                   desplazar e ir al estado 76
    '!'                   desplazar e ir al estado 77
    '('                   desplazar e ir al estado 78

    elemento_vector      ir al estado 79
    exp                  ir al estado 109
    identificador_clase  ir al estado 81
    constante            ir al estado 82
    constante_logica     ir al estado 83
    constante_entera     ir al estado 84


Estado 78

   88 exp: '(' . exp ')'
   89    | '(' . comparacion ')'
